# xrootd-hdfs

./: .gitignore  .travis.yml  CMakeLists.txt  GNUmakefile  Makefile  Makefile.am  Makefile.in  README.md  RELEASE_NOTES  XrdHdfs.cc  XrdHdfs.hh  XrdHdfsAio.hh  XrdHdfsConfig.cc  XrdHdfsInterface.hh  configure  configure.ac
CVS/: Entries  Repository  Root
cmake/: FindHdfs.cmake  FindJvm.cmake  FindXrootd.cmake
configs/config.d/: 40-xrootd-hdfs.cfg
rpm/: xrootd-hdfs.spec  xrootd-hdfs.sysconfig
spec/: xrootd-hdfs-compat.spec  xrootd-hdfs-compat.sysconfig  xrootd-hdfs-env.profile.sh  xrootd-hdfs.spec  xrootd-hdfs.sysconfig  xrootd.sample.hdfs.cfg.in
src/: XrdHdfs.cc  XrdHdfs.hh  XrdHdfsBootstrap.cc  XrdHdfsChecksum.cc  XrdHdfsChecksum.hh  XrdHdfsChecksumCalc.cc  XrdHdfsConfig.cc  XrdHdfsEnvCheck.cc  config.h.in  export-lib-symbols
